updated app to handle input of form

--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "react-scripts": "1.1.4",
     "sentiment": "^5.0.1"
   },
+  "homepage": "https://nathangostelow.github.io/Lyricsentiment/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
